--- a/web-scrape-functions.ipynb
+++ b/web-scrape-functions.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,13 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2010\n",
+      "---\n",
+      "done combining 2010\n",
+      "2011\n",
+      "---\n",
+      "done combining 2011\n",
       "2012\n",
       "---\n",
       "done combining 2012\n",
@@ -457,7 +463,7 @@
        "4    23.1  369.32  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +471,7 @@
    "source": [
     "# URL of page to be scraped\n",
     "\n",
-    "for season in range(2012, 2021):\n",
+    "for season in range(2010, 2021):\n",
     "    print(season)\n",
     "    print('---')\n",
     "    url = (f'https://fantasydata.com/nfl/fantasy-football-leaders?season={season}&seasontype=1&scope=1&subscope=1&startweek=1&endweek=1&aggregatescope=1&range=1')\n",
