--- a/web-scrape-functions.ipynb
+++ b/web-scrape-functions.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['fantasy_stats', 'super_bowl_table']"
       ]
      },
      "execution_count": 2,
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,13 +235,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2002\n",
+      "---\n",
+      "done combining 2002\n",
+      "2003\n",
+      "---\n",
+      "done combining 2003\n",
+      "2004\n",
+      "---\n",
+      "done combining 2004\n",
+      "2005\n",
+      "---\n",
+      "done combining 2005\n",
+      "2006\n",
+      "---\n",
+      "done combining 2006\n",
+      "2007\n",
+      "---\n",
+      "done combining 2007\n",
+      "2008\n",
+      "---\n",
+      "done combining 2008\n",
+      "2009\n",
+      "---\n",
+      "done combining 2009\n",
       "2010\n",
       "---\n",
       "done combining 2010\n",
@@ -463,7 +487,7 @@
        "4    23.1  369.32  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +495,7 @@
    "source": [
     "# URL of page to be scraped\n",
     "\n",
-    "for season in range(2010, 2021):\n",
+    "for season in range(2002, 2021):\n",
     "    print(season)\n",
     "    print('---')\n",
     "    url = (f'https://fantasydata.com/nfl/fantasy-football-leaders?season={season}&seasontype=1&scope=1&subscope=1&startweek=1&endweek=1&aggregatescope=1&range=1')\n",
@@ -504,13 +528,6 @@
     "\n",
     "combined_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
